# coin

./: .gitignore  .gitmodules  .travis.yml  CMakeCache.txt  CMakeLists.txt  README.md  azure-pipelines.yml  configure.ac  try-local.sh  try.sh  update-source.sh
Bonmin/: Makefile.am  configure.ac
Bonmin/.svn/: wc.db
Bonmin/Bonmin/: configure.ac
Bonmin/Cbc/: configure.ac
Bonmin/CoinUtils/: configure  configure.ac
Bonmin/Ipopt/: configure.ac
Bonmin/Osi/: CHANGELOG  configure  configure.ac
Bonmin/test/: Makefile.am
BuildTools/: coin-functions  coin.m4
Cbc/: Makefile.am  configure.ac
Cbc/Cbc/: configure.ac
Cbc/Cgl/: Makefile.in  configure  configure.ac
Cbc/Clp/: configure.ac
Cbc/CoinUtils/: Makefile.in  configure  configure.ac
Cbc/Osi/: CHANGELOG  Makefile.in  configure  configure.ac
Cbc/examples/: CbcBranchFollow2.cpp  CbcBranchLink.cpp  CbcBranchLink.hpp  CbcBranchUser.cpp  CbcCompareUser.cpp  CbcSolver3.cpp  CbcSolverLongThin.cpp  Makefile.in  allCuts.cpp  barrier.cpp  cbc_driverC_sos.c  crew.cpp  driver.cpp  driver2.cpp  driver3.cpp  driver4.cpp  fast0507.cpp  fast0507b.cpp  gear.cpp  hotstart.cpp  interrupt.cpp  link.cpp  longthin.cpp  lotsize.cpp  minimum.cpp  nway.cpp  qmip.cpp  qmip2.cpp  repeat.cpp  sample1.cpp  sample2.cpp  sample3.cpp  sample4.cpp  sample5.cpp  simpleBAB.cpp  sos.cpp  sudoku.cpp
Cbc/src/: CbcBranchAllDifferent.cpp  CbcBranchAllDifferent.hpp  CbcBranchDecision.cpp  CbcBranchDecision.hpp  CbcBranchDefaultDecision.cpp  CbcBranchDefaultDecision.hpp  CbcBranchLotsize.cpp  CbcBranchToFixLots.cpp  CbcBranchToFixLots.hpp  CbcBranchingObject.cpp  CbcBranchingObject.hpp  CbcCbcParam.cpp  CbcClique.cpp  CbcClique.hpp  CbcCompare.hpp  CbcCompareDefault.cpp  CbcCompareDefault.hpp  CbcCompareDepth.cpp  CbcCompareDepth.hpp  CbcCompareEstimate.cpp  CbcCompareEstimate.hpp  CbcCompareObjective.cpp  CbcCompareObjective.hpp  CbcConsequence.cpp  CbcConsequence.hpp  CbcCountRowCut.cpp  CbcCountRowCut.hpp  CbcCutGenerator.cpp  CbcCutGenerator.hpp  CbcCutModifier.cpp  CbcCutModifier.hpp  CbcCutSubsetModifier.cpp  CbcCutSubsetModifier.hpp  CbcDummyBranchingObject.cpp  CbcDummyBranchingObject.hpp  CbcEventHandler.hpp  CbcFathom.hpp  CbcFathomDynamicProgramming.cpp  CbcFixVariable.cpp  CbcFixVariable.hpp  (+104 more)
Cbc/test/: CInterfaceTest.c  Makefile.am
Cgl/: Makefile.am  Makefile.in  configure  configure.ac
Cgl/src/: CglCutGenerator.cpp  CglMessage.cpp  CglMessage.hpp  CglParam.hpp  CglStored.cpp  CglStored.hpp  CglTreeInfo.cpp  CglTreeInfo.hpp  Makefile.am  Makefile.in  config_cgl_default.h
Cgl/test/: Makefile.am  Makefile.in  unitTest.cpp
Clp/: Makefile.am  configure.ac
Clp/examples/: addBits.cpp  addRows.cpp  minimum.cpp  pdco.cpp  piece.cpp  sprint.cpp  sprint2.cpp  testGub.cpp  useVolume.cpp
Clp/src/: AbcCommon.hpp  AbcMatrix.cpp  AbcNonLinearCost.hpp  AbcPrimalColumnSteepest.cpp  AbcSimplex.cpp  AbcSimplex.hpp  (+56 more)
CoinUtils/: Makefile.am  Makefile.in  configure  configure.ac
Couenne/: Makefile.am  configure.ac  test.cmake
Ipopt/: CMakeLists.txt  Makefile  config.status  configure.ac  ipopt-uninstalled.pc  ipopt.pc
Ipopt/BuildTools/: coin.m4  prepare_new_release  prepare_new_stable  run_autotools
Ipopt/Ipopt/: configure.ac
Ipopt/Ipopt/src/LinAlg/: IpDenseVector.cpp
Ipopt/contrib/JavaInterface/: Makefile  Makefile.in  jipopt.cpp
Ipopt/contrib/MatlabInterface/src/: Makefile
Ipopt/contrib/RInterface/src/: Makevars
Ipopt/contrib/sIPOPT/AmplSolver/: Makefile
Ipopt/contrib/sIPOPT/examples/parametric_cpp/: Makefile
Ipopt/contrib/sIPOPT/examples/redhess_cpp/: Makefile
Ipopt/contrib/sIPOPT/src/: Makefile
Ipopt/doc/: documentation.tex
Ipopt/doxydoc/: doxygen.conf
Ipopt/examples/Cpp_example/: Makefile
Ipopt/examples/ScalableProblems/: Makefile
Ipopt/examples/hs071_c/: Makefile
Ipopt/examples/hs071_cpp/: Makefile
Ipopt/examples/hs071_f/: Makefile  hs071_f.f
Ipopt/src/Algorithm/: IpAlgBuilder.cpp  IpAlgBuilder.hpp  IpAugRestoSystemSolver.cpp  IpBacktrackingLineSearch.cpp  IpEquilibrationScaling.cpp  IpGenAugSystemSolver.cpp  IpIpoptAlg.cpp  IpIpoptCalculatedQuantities.cpp  IpIpoptData.cpp  IpIpoptData.hpp  IpIpoptNLP.hpp  IpIteratesVector.hpp  IpLimMemQuasiNewtonUpdater.cpp  IpLowRankAugSystemSolver.cpp  IpLowRankSSAugSystemSolver.cpp  IpNLPScaling.cpp  IpOrigIpoptNLP.cpp  IpPDFullSpaceSolver.cpp  IpQualityFunctionMuOracle.cpp  IpRestoIpoptNLP.hpp  IpStdAugSystemSolver.cpp  Makefile
Ipopt/src/Algorithm/Inexact/: IpInexactNormalTerminationTester.cpp  IpInexactNormalTerminationTester.hpp  IpInexactPDTerminationTester.cpp  IpInexactPDTerminationTester.hpp  IpIterativePardisoSolverInterface.cpp  IpIterativePardisoSolverInterface.hpp  Makefile
Ipopt/src/Algorithm/LinearSolvers/: IpMa57TSolverInterface.cpp  IpPardisoSolverInterface.cpp  IpTSymLinearSolver.cpp  IpTripletToCSRConverter.cpp  IpTripletToCSRConverter.hpp  Makefile
Ipopt/src/Apps/: Makefile
Ipopt/src/Apps/AmplSolver/: AmplTNLP.cpp  Makefile  Makefile.am
Ipopt/src/Apps/CUTErInterface/: Makefile
Ipopt/src/Common/: IpCachedResults.hpp  IpTaggedObject.cpp  IpTaggedObject.hpp  IpUtils.cpp  Makefile  Makefile.am  config.h1  config_ipopt.h
Ipopt/src/Interfaces/: IpIpoptApplication.cpp  IpIpoptApplication.hpp  IpStdInterfaceTNLP.cpp  IpTNLPAdapter.cpp  Makefile  Makefile.am
Ipopt/src/LinAlg/: IpDenseGenMatrix.hpp  IpMatrix.hpp  IpVector.hpp  Makefile  Makefile.am
Ipopt/src/LinAlg/TMatrices/: Makefile
Ipopt/src/contrib/CGPenalty/: IpCGPenaltyData.cpp  IpCGPenaltyData.hpp  Makefile
Ipopt/src/contrib/LinearSolverLoader/: Makefile
Ipopt/test/: Makefile  hs071_c.c  hs071_main.cpp  hs071_nlp.cpp  hs071_nlp.hpp  run_unitTests
Ipopt/tutorial/CodingExercise/C/1-skeleton/: Makefile
Ipopt/tutorial/CodingExercise/Cpp/1-skeleton/: Makefile
Ipopt/tutorial/CodingExercise/Cpp/3-solution/: Makefile
Ipopt/tutorial/CodingExercise/Fortran/2-mistake/: Makefile
Ipopt/tutorial/CodingExercise/Matlab/1-skeleton/: startup.m
Osi/: CHANGELOG  Makefile.am  Makefile.in  configure  configure.ac
manylinux/: .gitignore  bootstrap.sh  build.sh  create.sh  run.sh
(+719 files in other folders)
